@@ -14,6 +14,7 @@
 + load: anObject from: aFileObject;
 + load: anObject fromFileNamed: (const char *)aFileName;
 + load: anObject fromAppConfigFileNamed: (const char *)aFileName;
++ load: anObject fromAppDataFileNamed: (const char *)aFileName;
 
 - setFileObject: aFileObject;
 - loadObject: anObject;
